<resources>
    <string name="app_name">TicTacToe</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="start_game">Start Game</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="play_again">Play again?</string>
    <string name="res">Results</string>
    <string name="results"> </string>
    <string name="winner">Winner</string>
    <string name="status">Status</string>

</resources>
