<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:id="@+id/player1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorGameTextRed"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:id="@+id/player2"
        android:textSize="20sp"
        android:textColor="@color/colorGameTextBlue"
        android:textStyle="bold"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/player1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/firstPlayer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_alignTop="@+id/player1"
        android:layout_alignLeft="@+id/btnStart"
        android:layout_alignStart="@+id/btnStart"
        android:hint="@string/player_one" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/secondPlayer"
        android:hint="@string/player_two"
        android:inputType="textPersonName"
        android:layout_alignTop="@+id/player2"
        android:layout_alignLeft="@+id/firstPlayer"
        android:layout_alignStart="@+id/firstPlayer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/btnStart"
        android:background="@color/colorStartBtn"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
